# BakedPotato

./: README.md  potato.py  pyproject.toml
bakedpotato.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
bakedpotato/bakedpotato.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
