[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bakedpotato"
version = "1.0.1"
description = "A silly pixel-art potato baking simulator"
authors = [
  { name="Wilf", email="example@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pillow"]

[project.scripts]
bakedpotato = "bakedpotato.__main__:main"

[tool.setuptools.package-data]
bakedpotato = ["assets/*.png"]
